# cmake

./: .gitignore  .travis.yml  README.md  appveyor.yml
base/: CMakeLists.txt  build.sh  tutorial.cxx
base/MathFunctions/: CMakeLists.txt  mysqrt.cxx  mysqrt.h
gitignore/: generator.sh
qt/: Build.bat  CMakeLists.txt
qt/cmake/: CMakeLists.txt  _OpenSln.bat  _Run.bat  build.sh
qt/src/: main.cpp  mainwindow.cpp  mainwindow.ui
qt/src/resources/: resources.qrc
qt/src/tools/: tool.cpp  tool.h
